# Nyx

./: .cargo-deny.toml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci-deploy.yml  .gitlab-ci-mr.yml  .gitlab-ci-perf.yml  .gitlab-ci-security.yml  .gitlab-ci.yml  .semgrep.yml  .semgrepignore  AUTHORS.md  Apache LICENSE  CICD_IMPLEMENTATION_REPORT.md  CITATION.cff  Cargo.toml  DOCKER_ERROR_FIX.md  Dockerfile  Dockerfile.benchmark  Dockerfile.nyx-test  FORMAL_SCOPE.md  K8S-MULTI-CLUSTER-TEST-README.md  KUBELET_TIMEOUT_FIX.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  QUICKSTART.md  README-ja.md  README.md  REFACTORING_BASELINE.md  REFACTORING_FINAL_REPORT.md  SECURITY.md  SOCKS5_CODE_CHANGES.md  SUMMARY.md  SUPPORT.md  TASK_COMPLETION_REPORT.md  TODO.md  docker-compose.benchmark.yml  docker-compose.real-benchmark.yml  k8s-multi-cluster-config-1.yaml  (+15 more)
.cargo/: config.toml
.github/: CI_CD_DOCUMENTATION.md  CODEOWNERS
.github/workflows/: advanced-testing.yml  benchmarks.yml  ci-main.yml  ci.yml  cli-daemon-ci.yml  cli-daemon-release.yml  container-iac.yml  container-validation.yml  coverage.yml  dependency-review.yml  docker.yml  documentation.yml  formal-verification.yml  fuzzing.yml  main.yml  pr-validation.yml  release-automated.yml  release.yml  security-enhanced.yml  security.yml  spec-check.yml  update-badges.yml
benchmarks/results/: FINAL_REALISTIC_PERFORMANCE_REPORT.md  FINAL_SUMMARY.md  final_real_benchmark.json
docs/: 00_INDEX.md  00_INDEX_EN.md  01_PROJECT_OVERVIEW.md  01_PROJECT_OVERVIEW_EN.md  02_SYSTEM_ARCHITECTURE.md  02_SYSTEM_ARCHITECTURE_EN.md  03_MAJOR_FEATURES.md  03_MAJOR_FEATURES_EN.md  04_API_REFERENCE.md  04_API_REFERENCE_EN.md  05_DEVELOPMENT_SETUP.md  05_DEVELOPMENT_SETUP_EN.md  06_TEST_STRATEGY.md  06_TEST_STRATEGY_EN.md  07_SECURITY_GUIDE.md  07_SECURITY_GUIDE_EN.md  08_GLOSSARY.md  08_GLOSSARY_EN.md  ACTUAL_TOR_COMPARISON.md  CI_CD_INTEGRATION.md  CI_CD_OPTIMIZATION_REPORT.md  CI_CD_TLA_VERIFICATION.md  CI_CD_TOR_INTEGRATION_SUMMARY.md  CLI_DAEMON_CICD_GUIDE.md  CLI_DAEMON_GUIDE.md  C_CPP_ALTERNATIVES.md  GITLAB_CI_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING.md  K8S_NETWORK_PERFORMANCE_TESTING.md  PERFORMANCE_EVALUATION_SUMMARY.md  PHASE2_DEBUGGING_SUMMARY.md  QUICK_START_MULTI_VM.md  SIMPLIFIED_TESTING.md  SOCKS5_DEBUGGING.md  TLA_CICD_INTEGRATION_SUMMARY.md  TOR_COMPARISON_GUIDE.md  UNIMPLEMENTED_FEATURES.md  api.md  architecture.md  (+9 more)
examples/: full_config.toml
formal/: COMPLETION_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  FINAL_VERIFICATION_STATUS.md  FIX_COMPLETION_REPORT.md  NyxAPISpecification.tla  NyxAdvancedOptimization.tla  NyxAdvancedRouting.tla  NyxAdvancedVerification.cfg  NyxBasicVerification.cfg  NyxBasicVerification.tla  NyxBasicVerification_fast.cfg  NyxComprehensiveVerification.tla  NyxConcurrencyModels.tla  NyxConfigurationValidation.cfg  NyxConfigurationValidation.tla  NyxControlPlane.tla  NyxCryptography.cfg  NyxCryptography.tla  NyxDataPlane.tla  NyxDeployment.tla  NyxDetailedProofs.tla  NyxDistributedConsensus.cfg  NyxDistributedConsensus.tla  NyxEdgeComputing.cfg  NyxEdgeComputing.tla  NyxErrorHandling.tla  NyxFaultTolerance.cfg  NyxFaultTolerance.tla  NyxHelpers.tla  NyxMasterProofs.tla  NyxMobilityManagement.tla  NyxMonitoring.tla  NyxNFVAndSDN.cfg  NyxNFVAndSDN.tla  NyxNetworkLayer.cfg  NyxNetworkLayer.tla  NyxPerformanceModels.tla  NyxProtocolIntegration.tla  NyxQoSManagement.cfg  NyxQoSManagement.tla  (+49 more)
nyx-cli/: Dockerfile  README.md
nyx-control/: Cargo.toml
nyx-core/: Cargo.toml
nyx-crypto/: Cargo.toml  HYBRID_HANDSHAKE.md  README.md
nyx-daemon/: Cargo.toml  build.rs
nyx-fec/: Cargo.toml
nyx-http-proxy/: .gitignore  Dockerfile  MIX_NETWORK_INTEGRATION.md  QUICK_START_JA.md  README.md  connect.go  connect_test.go  exitnode.go  exitnode_test.go  go.mod  go.sum  integration_test.go  main.go  mixbridge.go  mixbridge_test.go  socks5.go  socks5_test.go  test-mix-routing.ps1  test-mix-routing.sh
nyx-mix/: Cargo.toml
nyx-mobile-ffi/: Cargo.toml
nyx-push-proxy/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
nyx-sdk/: Cargo.toml  GUIDE-ja.md  GUIDE.md  README.md  SDK_IMPROVEMENTS.md  build.rs
nyx-sdk-wasm/: Cargo.toml
nyx-sdk/examples/: basic_stream.rs  daemon_client.rs  error_handling.rs  event_subscription.rs  grpc_client_example.rs  stream_metadata.rs
nyx-sdk/src/: config.rs  connection.rs  daemon.rs  error.rs  grpc_client.rs  grpc_proto.rs  lib.rs  middleware.rs  stream.rs
nyx-sdk/tests/: integration_test.rs  stream_timeout_tests.rs
nyx-stream/: Cargo.toml
nyx-telemetry/: Cargo.toml
nyx-transport/: Cargo.toml
presentation/: .gitignore  README.md  package.json  script.md  slides.md  slides_3min.md
scripts/: ONELINERS.md  README.md  accurate-nyx-measurement.py  apply-network-delay.sh  check_spec_consistency.py  debug-socket-access.sh  debug-socks5.sh  deploy-nyxnet-multivm.sh  direct-binary-benchmark.py  docker-apply-delay.sh  docker-run-benchmark.sh  final-real-benchmark.py  generate-performance-report.py  init-k8s-cluster.sh  k8s-multi-cluster-test.sh  k8s-multicluster-test.ps1  k8s-network-perf-test.sh  k8s-nyx-test.sh  k8s-simple-test.sh  k8s-test-logger.sh  measure-nyx-performance.py  mix-node-simulator.py  multihop-benchmark.py  oneliner-setup.sh  quick-nyx-test.py  real-encrypted-benchmark.py  real-multihop-udp-benchmark.py  real-network-benchmark.py  real-rust-benchmark.py  run-comparison-benchmarks.sh  run-rust-benchmark.py  setup-cross-vm-network.sh  setup-vm-complete.sh  simple-performance-simulator.py  simulated-multihop-benchmark.py  test-cross-vm.sh  test-socks5-alternative.sh  tor-comparison-benchmark.py  ubuntu-docker-nyx-setup.sh  ubuntu-k8s-nyx-setup.sh  (+2 more)
tests/: Cargo.toml  quick-perf-test.rs
tests/benchmarks/: Cargo.toml  README.md  application_scenarios.rs
tests/src/: lib.rs  test_harness.rs
tests/src/integration/: cover_traffic_ratio.rs  mod.rs  multipath_transfer.rs  network_simulation.rs  stress_test.rs
tests/tests/: advanced_integration.rs  e2e_handshake.rs
(+118 files in other folders)
