[workspace]
members = [
    "nyx-core",
    "nyx-crypto",
    "nyx-transport",
    "nyx-mix",
    "nyx-fec",
    "nyx-stream",
    "nyx-telemetry", # Prometheus exporter crate
    "nyx-control",
    "nyx-cli",
    "nyx-daemon",
    "nyx-sdk",
    "nyx-sdk-wasm",
    "nyx-conformance",
    "nyx-mobile-ffi", # Mobile platform FFI bindings
    "build-protoc",
    "tests", # Integration test suite
    "tests/benchmarks", # Application-level benchmarks
]
exclude = [
    "fuzz", # cargo-fuzz targets are excluded from workspace
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["SeleniaProject"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SeleniaProject/NyxNet"
homepage = "https://github.com/SeleniaProject/NyxNet"
keywords = ["privacy", "anonymity", "post-quantum", "cryptography", "networking"]
categories = ["cryptography", "network-programming", "security"]
rust-version = "1.70"

[workspace.lints.rust]
# Basic security and reliability lints
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Code quality lints
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
unreachable = "warn"
todo = "warn"
unimplemented = "warn"
# Performance lints
needless_collect = "warn"
map_flatten = "warn"
# Style lints
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"

[workspace.dependencies]
# Core async runtime - unified version across workspace
tokio = { version = "1.37", features = ["rt"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# Random number generation
rand = { version = "0.8", features = ["std"] }
rand_core = "0.6"
# Cryptography - unified versions
sha2 = "0.10"
blake3 = "1.5"
aead = "0.5"  # Unified AEAD trait
chacha20 = "0.9"
chacha20poly1305 = "0.10"
cipher = "0.4"
# Hashing
ahash = "0.8"
# Web frameworks
axum = "0.7"
axum-core = "0.4"
# Encoding
base64 = "0.22"
# Collections
bit-set = "0.8"
bit-vec = "0.8"
# HTTP
bytes = "1.8"
http = "1.3"
http-body = "1.0"
hyper = "1.7"
# Protobuf
prost = "0.13"
prost-types = "0.13"
tonic = "0.12"
# Utilities
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
# Async utilities
async-trait = "0.1"
tokio-stream = "0.1"
# Configuration
toml = "0.8"
# Testing and benchmarking (dev dependencies)
criterion = { version = "0.5", features = ["html_reports"] }
hex-literal = "0.4"
tempfile = "3.8"
tokio-test = "0.4"
proptest = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3  # Maximum optimization for performance
panic = "abort"
strip = true   # Strip debug symbols for smaller binaries
overflow-checks = false  # Disable overflow checks for maximum performance
debug = 0  # Disable debug info for smaller binaries

# Incremental compilation disabled for release builds for better optimization
incremental = false

# Additional performance optimizations
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

# Bench profile inherits from release but with specific optimizations for benchmarking
[profile.bench]
inherits = "release" 

# Reduce link-time memory usage for tests on Windows/MSVC by disabling debug symbols
# and minimizing object fragmentation.
[profile.test]
debug = 0
codegen-units = 1
opt-level = 0

# Package-specific profile overrides (Cargo workspace-wide). This moves per-crate
# tuning out of sub-crates to avoid the warning:
#  "profiles for the non root package will be ignored, specify profiles at the workspace root".
# Keep nyx-mobile-ffi optimized for release builds without impacting other crates.
[profile.release.package.nyx-mobile-ffi]
codegen-units = 1
opt-level = 3

# Replace unmaintained crates with maintained alternatives
[patch.crates-io]
# Replace 'instant' with 'web-time' (maintained alternative for WASM time handling)
instant = { git = "https://github.com/sebcrozet/instant", branch = "master" }
# Replace 'serde_cbor' with 'ciborium' (maintained CBOR implementation)
# Note: serde_cbor users should migrate to ciborium directly in code
