[package]
name = "nyx-sdk-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM bindings for Nyx client operations"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# Core dependencies required by all features
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
# Optional dependencies
nyx-crypto = { path = "../nyx-crypto", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "PushManager",
    "PushSubscription",
    "PushSubscriptionOptionsInit",
    "Request",
    "Response",
    "Headers",
    "Notification",
    "console",
    "Performance"
], optional = true } 
serde-wasm-bindgen = { version = "0.6", optional = true }
once_cell = { version = "1.19", optional = true }
thiserror = { version = "1.0", optional = true }
semver = { version = "1.0", features = ["serde"], optional = true }
ed25519-dalek = { version = "2", features = ["std", "rand_core"], optional = true }
sha2 = { version = "0.10", optional = true }
ciborium = { version = "0.2", optional = true }

[features]
default = ["core", "push", "noise"]
core = []
plugin = ["serde-wasm-bindgen", "ed25519-dalek", "sha2", "semver", "ciborium"]
multipath = ["serde-wasm-bindgen", "once_cell", "thiserror"]
noise = ["getrandom"]
push = ["getrandom", "js-sys", "web-sys", "wasm-bindgen-futures"]
hpke = ["nyx-crypto", "getrandom"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
ciborium = "0.2"