[package]
name = "nyx-sdk"
version = "0.1.0"
edition = "2021"

description = "Nyx SDK for application integration with comprehensive stream API"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
nyx-core = { path = "../nyx-core" }
nyx-stream = { path = "../nyx-stream" }
nyx-crypto = { path = "../nyx-crypto" }

# Async runtime and networking
tokio = { version = "1.37", features = ["full"] }
tokio-stream = "0.1"

# gRPC client dependencies - Pure Rust configuration
# Using tonic without default features to exclude ring/openssl (C dependencies)
# Features: transport (TCP/HTTP2), prost (protobuf), codegen (client generation)
tonic = { version = "0.11", default-features = false, features = ["transport", "prost", "codegen"] }
prost = "0.12"
prost-types = "0.12"
tokio-util = { version = "0.7", features = ["codec"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Crypto and hashing for deterministic key derivation in daemon client
ed25519-dalek = { version = "2", features = ["std"] }
blake3 = { version = "1", features = ["pure"] }
hex = "0.4"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Additional dependency
memchr = "2"

# Async traits and utilities
async-trait = "0.1"
futures-util = "0.3"
pin-project-lite = "0.2"

# Reconnection and backoff
# Replaced unmaintained backoff with actively maintained tokio-retry
tokio-retry = { version = "0.3", optional = true }
# backoff = { version = "0.4", features = ["tokio"], optional = true } # REMOVED: unmaintained
humantime-serde = "1.1"

# Stream utilities
bytes = "1.5"
futures = "0.3"

# Time and duration utilities
humantime = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# Random number generation for jitter
fastrand = "2.0"

# Optional features
tracing-subscriber = "0.3.20"

[build-dependencies]
# Build-time gRPC code generation - Pure Rust configuration
tonic-build = "0.11"

[features]
default = []
# Enable stream reconnection with automatic retry using tokio-retry
reconnect = ["tokio-retry"]
# Enable comprehensive error propagation
error-propagation = []
# Enable metrics collection
metrics = ["nyx-core/telemetry"]
 # Legacy gRPC backup compatibility flag
 # Kept for backward compatibility with existing configurations
 # but gRPC functionality remains disabled in favor of JSON-RPC
 grpc-backup = []

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0" 
