[package]
name = "nyx-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Core workspace dependencies
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rand = { workspace = true }

# Workspace crates for testing
nyx-daemon = { path = "../nyx-daemon" }
nyx-sdk = { path = "../nyx-sdk" }
nyx-stream = { path = "../nyx-stream" }
nyx-core = { path = "../nyx-core" }

# Old deprecated integration tests have been moved to tests/*.rs.disabled
# Use the new test_harness-based tests in src/integration/ instead
